[package]
name = "pallet_bazaar_swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { default-features = false, version = "5.0.0" }
frame-system = { default-features = false, version = "5.0.0" }
sp-runtime = { default-features = false, version = "5.0.0" }
sp-std = { default-features = false, version = "5.0.0" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
]
