[package]
name = "pallet-bazaar-swarm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system  = { workspace = true, default-features = false }
sp-runtime    = { workspace = true, default-features = false }
sp-std        = { workspace = true, default-features = false }
scale-info    = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
]
